fix some things so that the totals can be in the worked_shifts too

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -180,14 +180,15 @@ float: right;
   clear: right;
   display: inline;
   text-align: right;
-  width: 250px;
   font-weight: bold;
   font-size: larger;
 }
+
 .totals td {
   background-color: yellow;
 }
 .totals td.amount{
+  width: 50px;
   font-weight: normal;
 }
 .totals td.below_req {
